# catchNews

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  产品版.md  需求文档-个人版.md
.cursor/rules/: project-conventions.mdc
.github/workflows/: ci.yml
backend/core/: config.py  link_validator.py  normalizer.py
backend/core/collectors/: baidu.py  base.py  github_stars.py  github_trending.py  weibo.py  zhihu.py
backend/core/models/: base.py
backend/core/schemas/: hot_item.py
backend/personal/: .env.example  Dockerfile  requirements.txt
backend/personal/app/: config.py  database.py  main.py  scheduler.py
backend/personal/app/api/: hot_items.py  refresh.py
backend/personal/app/services/: github_stars.py  hot_item_service.py  ingestion.py
backend/pro/: .env.example  Dockerfile  requirements.txt
backend/pro/app/: config.py  main.py
backend/tests/: conftest.py
backend/tests/core/: test_github_trending.py  test_link_validator.py  test_normalizer.py
backend/tests/personal/: test_api.py
design/: catchnews-github-repo-detail.canvas.tsx  catchnews-personal-home.canvas.tsx
docker/personal/: docker-compose.yml
docker/pro/: docker-compose.yml
docs/dev/: CONTRIBUTING.md  开发指南.md
docs/personal/: 产品方案.md  需求文档.md
frontend/personal/: .env.local.example  Dockerfile  package-lock.json  package.json
frontend/personal/app/: globals.css  layout.tsx  page.tsx
frontend/personal/components/: HotItemTable.tsx
frontend/personal/lib/: api.ts
frontend/pro/: README.md
frontend/shared/: package.json  tsconfig.json
